src/test/ui/type-alias-impl-trait/issue-57611-trait-alias.stderr
error[E0308]: mismatched types
  --> $DIR/issue-57611-trait-alias.rs:21:9
   |
LL |         |x| x
   |         ^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'a> Fn<(&'a X,)>`
              found trait `Fn<(&X,)>`
note: this closure does not fulfill the lifetime requirements
  --> $DIR/issue-57611-trait-alias.rs:21:9
   |
LL |         |x| x
   |         ^^^

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57611-trait-alias.rs:21:9
   |
LL |         |x| x
   |         ^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 X) -> &X` must implement `FnOnce<(&'1 X,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 X,)>`, for some specific lifetime `'2`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
